--- a/src/network/blockchain/CMakeLists.txt
+++ b/src/network/blockchain/CMakeLists.txt
@@ -4,4 +4,5 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 add_subdirectory(bitcoin)
+add_subdirectory(bitmessage)
 add_subdirectory(sync)
